# rcrd

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
src/: config.rs  devices.rs  ffmpeg.rs  main.rs  output.rs  ui.rs
