[package]
name = "rcrd"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["std"] }
libc = "0.2"
ratatui = "0.26"
crossterm = "0.27"
regex = "1"
# whisper-rs requires libclang and cmake to build
whisper-rs = "0.11" 