[package]
name = "rcrd"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["std", "local-offset"] }
ratatui = "0.26"
crossterm = "0.27"
regex = "1"
dirs = "5"
num_cpus = "1.16"
libc = "0.2"
# External whisper-cli will be invoked directly; no Rust bindings
